--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
                         <option value="https://mystic-vision-ai-mini.netlify.app/">Mini Version</option>
                         <option value="https://cosmic-chat-ai-simple-ai-chatbot.netlify.app/">Cosmic Chat AI</option>
                         <option value="https://small-ai-big-vision.netlify.app/" selected>Small AI (Current)</option> <!-- 'selected' attribute moved here -->
+                        <option value="https://small-ai-big-vision-v2.netlify.app/" selected>Small AI v2</option>
                     </select>
                 </div>
             </div>
