modified:   index.html

--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
                         <option value="https://mystic-vision-ai-basic.netlify.app/">Basic Version</option>
                         <option value="https://mystic-vision-ai-mini.netlify.app/">Mini Version</option>
                         <option value="https://cosmic-chat-ai-simple-ai-chatbot.netlify.app/">Cosmic Chat AI</option>
-                        <option value="https://small-ai-big-vision.netlify.app/">Small AI</option>
-                        <option value="https://small-ai-big-vision-v2.netlify.app/" selected>Small AI v2 (Current)</option> <!-- 'selected' attribute moved here -->
+                        <option value="https://small-ai-big-vision.netlify.app/" selected>Small AI (Current)</option>
+                        <option value="https://small-ai-big-vision-v2.netlify.app/">Small AI v2</option> <!-- 'selected' attribute moved here -->
                     </select>
                 </div>
             </div>
