--- a/index.html
+++ b/index.html
@@ -1905,72 +1905,38 @@
         }
 
 
-        // Generic API call function with exponential backoff
+                // Generic API call function now proxies through Netlify serverless function
         async function callGeminiAPI(payload) {
-            // >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-            // IMPORTANT: Replace "YOUR_GEMINI_API_KEY" with your actual Google Gemini API Key.
-            // Get your API key from Google AI Studio: https://makersuite.google.com/
-            // Do NOT expose your API key directly in production applications.
-            // For production, consider using a backend proxy to secure your API key.
-            // <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-            const apiKey = "AIzaSyD7KfCynGxjHbPhr8bvP8Se0l8KrtyO0Ks"; 
+            // Target the Netlify function endpoint
+            const proxyUrl = "/.netlify/functions/gemini-proxy"; 
 
-            if (apiKey === "YOUR_GEMINI_API_KEY" || !apiKey || apiKey === "") { 
-                throw new Error("API Key is not set or is the default placeholder. Please replace 'YOUR_GEMINI_API_KEY' in the script with your actual Gemini API key.");
-            }
+            try {
+                const response = await fetch(proxyUrl, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(payload)
+                });
 
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
-
-            let response;
-            let result;
-            let success = false;
-            let retryCount = 0;
-            const maxRetries = 3;
-            let delay = 1000; // 1 second initial delay
-
-            while (retryCount < maxRetries && !success) {
-                try {
-                    response = await fetch(apiUrl, {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify(payload)
-                    });
-
-                    if (response.status === 429) { // Too many requests
-                        if (retryCount < maxRetries - 1) {
-                            console.warn(`API rate limit exceeded. Retrying in ${delay / 1000}s...`);
-                            await new Promise(res => setTimeout(res, delay));
-                            delay *= 2; // Exponential backoff
-                            retryCount++;
-                        } else {
-                            throw new Error('API rate limit exceeded. Please try again later.');
-                        }
-                    } else if (!response.ok) {
-                        const errorData = await response.json();
-                        throw new Error(`API error: ${response.status} ${response.statusText} - ${errorData.error?.message || 'Unknown error'}`);
-                    } else {
-                        result = await response.json();
-                        success = true;
-                    }
-                } catch (err) {
-                    if (retryCount < maxRetries - 1) {
-                        console.warn(`Fetch error: ${err.message}. Retrying in ${delay / 1000}s...`);
-                        await new Promise(res => setTimeout(res, delay));
-                        delay *= 2;
-                        retryCount++;
-                    } else {
-                        throw err; // Re-throw the last error after max retries
-                    }
+                if (!response.ok) {
+                    // Try to parse error response from the proxy
+                    const errorData = await response.json().catch(() => ({})); 
+                    const errorMessage = errorData.error || `Serverless function returned status ${response.status}`;
+                    console.error("Proxy Error Details:", errorData);
+                    throw new Error(`AI Request Failed: ${errorMessage}`);
                 }
-            }
-            
-            if (result && result.candidates && result.candidates.length > 0 &&
-                result.candidates[0].content && result.candidates[0].content.parts &&
-                result.candidates[0].content.parts.length > 0) {
-                // Return the text content from the response
-                return result.candidates[0].content.parts[0].text;
-            } else {
-                throw new Error('Failed to get a valid response from the AI. No candidates found or content is empty.');
+
+                // The Netlify proxy function is expected to return { text: "..." }
+                const result = await response.json();
+
+                if (result.text) {
+                    return result.text;
+                } else {
+                    throw new Error('Proxy returned successfully, but AI response text was empty or malformed.');
+                }
+            } catch (error) {
+                console.error('Netlify Proxy Fetch Error:', error);
+                // Re-throw the error so the calling function can handle cleanup
+                throw error;
             }
         }
     </script>
